--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "framer-motion": "^11.18.1",
+    "framer-motion": "^11.18.2",
     "next": "15.1.4",
     "next-nprogress-bar": "^2.4.3",
     "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
